# base-rs

./: .gitattributes  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG-FORM.yml  FEATURE-FORM.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/tests/: sol.rs
crates/dyn-abi/: Cargo.toml  README.md
crates/dyn-abi/benches/: abi.rs  types.rs
crates/dyn-abi/src/: arbitrary.rs  coerce.rs  error.rs  lib.rs  specifier.rs  token.rs  ty.rs
crates/dyn-abi/src/dynamic/: error.rs  event.rs  mod.rs  token.rs  ty.rs  value.rs
crates/dyn-abi/src/eip712/: coerce.rs  parser.rs  resolver.rs  typed_data.rs
crates/dyn-abi/src/ext/: abi.rs  error.rs  event.rs
crates/json-abi/: Cargo.toml  README.md
crates/json-abi/benches/: json_abi.rs
crates/json-abi/src/: abi.rs  internal_type.rs  item.rs  lib.rs  param.rs  to_ylm.rs  utils.rs
crates/json-abi/tests/: abi.rs
crates/json-abi/tests/it/: abi_items.rs  abis.rs  event_params.rs  params.rs  state_mutability.rs  test.rs
crates/primitives/: Cargo.toml  README.md
crates/primitives/benches/: primitives.rs
crates/primitives/src/: aliases.rs  common.rs  common_ican.rs  lib.rs  log.rs  log_ican.rs
crates/primitives/src/bits/: address.rs  bloom.rs  checksum_address.rs  function.rs  ican_address.rs  macros.rs  mod.rs  sig.rs
crates/primitives/src/bytes/: mod.rs
crates/primitives/src/crypto/: mod.rs  private.rs  public.rs
crates/primitives/src/signature/: error.rs  parity.rs  sig.rs  utils.rs
crates/primitives/src/signed/: int.rs
crates/primitives/src/utils/: mod.rs  units.rs
crates/sol-macro/: Cargo.toml
crates/sol-macro/src/expand/: contract.rs  struct.rs
crates/sol-types/src/: eip712.rs  errors.rs  lib.rs
crates/sol-types/src/abi/: decoder.rs  encoder.rs
crates/sol-types/src/types/: data_type.rs  error.rs  function.rs  struct.rs  ty.rs  value.rs
crates/sol-types/src/types/event/: mod.rs  topic.rs
crates/sol-types/src/types/interface/: mod.rs
crates/sol-types/tests/doctests/: contracts.rs  events.rs  function_like.rs  structs.rs  types.rs
crates/sol-types/tests/macros/sol/: eip712.rs  json.rs  mod.rs
crates/syn-solidity/src/: kw.rs
crates/syn-solidity/src/yul/type/: evm_builtin.rs
crates/syn-solidity/tests/contracts/: EnumsInLibraryFunctions.sol  ForgeStd.patch  ForgeStd.sol  OpenzeppelinContracts.sol  PrbMath.patch  PrbMath.sol  SeaportV1_5.sol  Solady.sol  UniswapV2Factory.patch  UniswapV2Factory.sol  UniswapV2Pair.patch  UniswapV2Pair.sol  UniswapV3Factory.sol  UniswapV3Pool.sol  UniswapV3PoolDeployer.sol
crates/syn-ylem/: Cargo.toml  README.md
crates/syn-ylem/src/: file.rs  kw.rs  lib.rs  macros.rs
crates/syn-ylem/src/attribute/: function.rs  mod.rs  variable.rs
crates/syn-ylem/src/expr/: args.rs  mod.rs
crates/syn-ylem/src/ident/: kw.c  mod.rs  path.rs
crates/syn-ylem/src/item/: contract.rs  enum.rs  error.rs  event.rs  function.rs  import.rs  mod.rs  pragma.rs  struct.rs  udt.rs  using.rs
crates/syn-ylem/src/lit/: mod.rs
crates/syn-ylem/src/stmt/: break.rs  continue.rs  do_while.rs  emit.rs  for.rs  mod.rs  return.rs  revert.rs  try.rs  var_decl.rs  while.rs
crates/syn-ylem/src/type/: function.rs  mapping.rs  mod.rs
crates/syn-ylem/src/variable/: list.rs  mod.rs
crates/syn-ylem/src/yul/expr/: fn_call.rs  mod.rs
crates/syn-ylem/src/yul/ident/: mod.rs  path.rs
crates/syn-ylem/src/yul/stmt/: assignment.rs  block.rs  for.rs  if.rs  mod.rs  switch.rs  var_decl.rs
crates/syn-ylem/src/yul/type/: evm_builtin.rs  function.rs
crates/syn-ylem/tests/: contracts.rs
crates/syn-ylem/tests/contracts/: ForgeStd.patch  ForgeStd.sol  OpenzeppelinContracts.sol  PrbMath.patch  PrbMath.sol  SeaportV1_5.sol  Solady.sol  UniswapV2Factory.patch  UniswapV2Factory.sol  UniswapV2Pair.patch  UniswapV2Pair.sol  UniswapV3Factory.patch  UniswapV3Factory.sol  UniswapV3Pool.patch  UniswapV3PoolDeployer.patch
crates/ylm-macro/: Cargo.toml  README.md  doctests
crates/ylm-macro-input/: Cargo.toml
crates/ylm-macro-input/src/: attr.rs  expander.rs  input.rs  json.rs  lib.rs
crates/ylm-macro/src/: lib.rs  utils.rs  verbatim.rs
crates/ylm-macro/src/expand/: contract.rs  enum.rs  error.rs  event.rs  function.rs  mod.rs  struct.rs  to_abi.rs  ty.rs  udt.rs  var_def.rs
crates/ylm-type-parser/: Cargo.toml  README.md
crates/ylm-type-parser/src/: ident.rs  lib.rs  root.rs  stem.rs  tuple.rs  type_spec.rs
crates/ylm-types/: Cargo.toml  README.md  type_system.md
crates/ylm-types/src/: eip712.rs  errors.rs  ext.rs  lib.rs  utils.rs
crates/ylm-types/src/abi/: decoder.rs  encoder.rs  mod.rs  token.rs
crates/ylm-types/src/types/: data_type.rs  enum.rs  error.rs  function.rs  mod.rs  struct.rs  ty.rs  value.rs
crates/ylm-types/src/types/event/: mod.rs  topic.rs  topic_list.rs
crates/ylm-types/src/types/interface/: event.rs  mod.rs
crates/ylm-types/tests/doctests/: contracts.rs  events.rs  function_like.rs  json.rs  structs.rs  types.rs
crates/ylm-types/tests/macros/sol/: abi.rs  eip712.rs  json.rs  mod.rs
crates/ylm-types/tests/ui/: contract.rs  contract.stderr  empty.rs  empty.stderr  error.rs  error.stderr  event.rs  event.stderr  function.rs  function.stderr  imports.rs  keywords.rs  keywords.stderr  overloads.rs  resolve.rs  resolve.stderr  storage.rs  type.rs  type.stderr  var_def.rs
crates/ylm-types/tests/ui/features/json/: abi.rs  abigen.stderr
crates/ylm-types/tests/ui/features/not(json)/: abi.rs  abi.stderr  abigen.rs  abigen.stderr
scripts/: bless_tests.sh
tests/core-sol/: Cargo.toml
tests/core-sol/src/: lib.rs
