[workspace]
members = ["crates/*", "tests/*"]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2021"
rust-version = "1.65"
authors = ["Base-rs Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/core-coin/base-rs"
repository = "https://github.com/core-coin/base-rs"
exclude = ["tests"]

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
# workspace crates
base-core = { version = "0.7.0", path = "crates/core", default-features = false }
base-dyn-abi = { version = "0.7.0", path = "crates/dyn-abi", default-features = false }
base-json-abi = { version = "0.7.0", path = "crates/json-abi", default-features = false }
base-primitives = { version = "0.7.0", path = "crates/primitives", default-features = false }
base-ylm-macro = { version = "0.7.0", path = "crates/ylm-macro", default-features = false }
base-ylm-macro-input = { version = "0.7.0", path = "crates/ylm-macro-input", default-features = false }
base-ylm-type-parser = { version = "0.7.0", path = "crates/ylm-type-parser", default-features = false }
base-ylm-types = { version = "0.7.0", path = "crates/ylm-types", default-features = false }
syn-ylem = { version = "0.7.0", path = "crates/syn-ylem", default-features = false }

# serde
serde = { version = "1.0", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# ssz
ethereum_ssz = { version = "0.5.3", default-features = false }

# macros
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

cfg-if = "1.0.0"
derive_more = "0.99"
hex-literal = "0.4"
paste = "1.0"
num_enum = "0.7"
thiserror = "1.0"

tiny-keccak = "2.0"

# misc
alloy-rlp = { version = "0.3", default-features = false }
alloy-rlp-derive = { version = "0.3", default-features = false }
arbitrary = "1.3"
arrayvec = { version = "0.7", default-features = false }
bincode = "1.3"
bytes = { version = "1", default-features = false }
criterion = "0.5"
derive_arbitrary = "1.3"
getrandom = "0.2"
hex = { package = "const-hex", version = "1.10", default-features = false, features = ["alloc"] }
itoa = "1"
once_cell = "1"
pretty_assertions = "1.4"
proptest = "1"
proptest-derive = "0.4"
rand = { version = "0.8", default-features = false }
ruint = { git = "https://github.com/Kuly14/uint.git",  default-features = false, features = ["alloc"] }
ruint-macro = { git = "https://github.com/Kuly14/uint.git",  default-features = false }
libgoldilocks = { git = "https://github.com/core-coin/ed448-rs.git"}
winnow = { version = "0.6", default-features = false, features = ["alloc"] }
postgres-types = "0.2.6"
allocative = { version = "0.3.2", default-features = false }
