[package]
name = "base-core"
description = "Rust Core core libraries"
keywords = ["core", "abi", "encoding", "evm", "solidity"]
categories = ["no-std", "encoding", "cryptography::cryptocurrencies"]
homepage = "https://github.com/core-coin/base-rs/tree/main/crates/dyn-abi"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
base-primitives = { workspace = true, default-features = false }

base-dyn-abi = { workspace = true, default-features = false, optional = true }
base-json-abi = { workspace = true, default-features = false, optional = true }
base-ylm-types = { workspace = true, default-features = false, optional = true }

alloy-rlp = { workspace = true, default-features = false, optional = true }

[features]
std = ["base-primitives/std", "base-json-abi?/std", "base-dyn-abi?/std", "base-ylm-types?/std"]

dyn-abi = ["ylm-types", "dep:base-dyn-abi"]
json-abi = ["json", "serde", "dep:base-json-abi"]
json = ["base-ylm-types?/json"]
ylm-types = ["dep:base-ylm-types"]

tiny-keccak = ["base-primitives/tiny-keccak"]
native-keccak = ["base-primitives/native-keccak"]

postgres = ["std", "base-primitives/postgres"]
getrandom = ["base-primitives/getrandom"]
rand = ["base-primitives/rand"]
rlp = ["base-primitives/rlp", "dep:alloy-rlp"]
serde = ["base-primitives/serde"]
ssz = ["std", "base-primitives/ssz"]
arbitrary = [
    "std",
    "base-primitives/arbitrary",
    "base-ylm-types?/arbitrary",
    "base-dyn-abi?/arbitrary",
]
k256 = ["base-primitives/k256"]
eip712 = ["base-ylm-types?/eip712-serde", "base-dyn-abi?/eip712"]
