[package]
name = "base-dyn-abi"
description = "Run-time ABI and EIP-712 implementations"
keywords = ["core", "abi", "encoding", "evm", "solidity"]
categories = ["no-std", "encoding", "cryptography::cryptocurrencies"]
homepage = "https://github.com/core-coin/base-rs/tree/main/crates/dyn-abi"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
base-json-abi.workspace = true
base-ylm-type-parser.workspace = true
base-ylm-types.workspace = true
base-primitives.workspace = true

hex.workspace = true
itoa.workspace = true
winnow.workspace = true

# eip712
derive_more = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# arbitrary
arbitrary = { workspace = true, optional = true }
derive_arbitrary = { workspace = true, optional = true }
proptest = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true
ethabi = { git = "https://github.com/core-coin/coreabi"}
rand = "0.8"
serde_json = { workspace = true }

[features]
default = ["std"]
std = [
    "base-json-abi/std",
    "base-ylm-types/std",
    "base-ylm-type-parser/std",
    "base-primitives/std",
    "hex/std",
    "serde?/std",
    "serde_json?/std",
]
eip712 = ["base-ylm-types/eip712-serde", "dep:derive_more", "dep:serde", "dep:serde_json"]
arbitrary = [
    "std",
    "base-ylm-types/arbitrary",
    "dep:arbitrary",
    "dep:derive_arbitrary",
    "dep:proptest",
]

# Debug winnow parsers; intentionally doesn't enable `winnow/debug`
debug = ["std", "base-ylm-type-parser/debug"]

[[bench]]
name = "abi"
path = "benches/abi.rs"
harness = false

[[bench]]
name = "types"
path = "benches/types.rs"
harness = false
