[package]
name = "base-json-abi"
description = "Full Core JSON-ABI implementation"
keywords = ["core", "abi", "json", "serde", "serialization"]
categories = ["encoding", "cryptography::cryptocurrencies"]
homepage = "https://github.com/core-coin/base-rs/tree/main/crates/json-abi"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
base-primitives = { workspace = true, features = ["serde"] }
base-ylm-type-parser.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true
ethabi = { git = "https://github.com/core-coin/coreabi"}
pretty_assertions.workspace = true
serde_json.workspace = true

[features]
default = ["std"]
std = ["serde/std", "base-primitives/std", "base-ylm-type-parser/std", "serde_json?/std"]
serde_json = ["dep:serde_json"]

[[bench]]
name = "json_abi"
path = "benches/json_abi.rs"
harness = false
