[package]
name = "base-core-ylm-test"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
base-core = { workspace = true, features = ["ylm-types", "json"] }
